# SADPAC

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: Home.py
src/app/: chroma_client.py  config.py  document_processor.py  rag_pipeline.py
src/pages/: 1_📚_Dokumente.py  2_💬_Chat.py
src/scripts/: load_documents.py
src/tests/: test_chroma_client.py
